--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>Document</title>
 		<link rel="stylesheet" href="styles.css" />
 	</head>
+
 	<body>
 		<div class="postcard">
 			<div class="postcard-header">
@@ -17,8 +18,13 @@
 				/>
 			</div>
 			<div class="postcard-body">
-				<div class="body-left">--soy el lado izquierdo--</div>
-				<div class="body-right">--soy el lado derecho--</div>
+				<div class="body-left">
+					<p>Look how awesome! This a postcard that i created using HTML5 and CSS3 duringmy 4Geeks Academy Course!</p>
+					<p>This is so cool, can't wait to start doing more stuff!</p>
+				</div>
+				<div class="body-right">
+					<input placeholder="Some Name" /> <input placeholder="Some Email" /> <input placeholder="Some comment" />
+				</div>
 			</div>
 			<div class="postcard-footer"><button>Send My Postcard</button></div>
 		</div>
